--- a/hst-reader/mainwindow.ui
+++ b/hst-reader/mainwindow.ui
@@ -31,14 +31,21 @@
       </property>
      </widget>
     </item>
-    <item row="0" column="1">
+    <item row="0" column="2">
      <widget class="QToolButton" name="findFileButton">
       <property name="text">
        <string>Открыть файл</string>
       </property>
      </widget>
     </item>
-    <item row="2" column="0" colspan="2">
+    <item row="1" column="2">
+     <widget class="QPushButton" name="pushButton">
+      <property name="text">
+       <string>Прочитать файл</string>
+      </property>
+     </widget>
+    </item>
+    <item row="3" column="0" colspan="3">
      <widget class="QTextBrowser" name="textBrowser">
       <property name="acceptDrops">
        <bool>false</bool>
@@ -61,10 +68,10 @@
       </property>
      </spacer>
     </item>
-    <item row="1" column="1">
-     <widget class="QPushButton" name="pushButton">
+    <item row="2" column="2">
+     <widget class="QPushButton" name="saveCsvButton">
       <property name="text">
-       <string>Прочитать файл</string>
+       <string>Сохранить Csv</string>
       </property>
      </widget>
     </item>
