--- a/hst-reader/mainwindow.ui
+++ b/hst-reader/mainwindow.ui
@@ -31,13 +31,6 @@
       </property>
      </widget>
     </item>
-    <item row="0" column="2">
-     <widget class="QToolButton" name="findFileButton">
-      <property name="text">
-       <string>Открыть файл</string>
-      </property>
-     </widget>
-    </item>
     <item row="1" column="2">
      <widget class="QPushButton" name="pushButton">
       <property name="text">
@@ -45,13 +38,20 @@
       </property>
      </widget>
     </item>
-    <item row="3" column="0" colspan="3">
+    <item row="4" column="0" colspan="3">
      <widget class="QTextBrowser" name="textBrowser">
       <property name="acceptDrops">
        <bool>false</bool>
       </property>
       <property name="openLinks">
        <bool>false</bool>
+      </property>
+     </widget>
+    </item>
+    <item row="0" column="2">
+     <widget class="QToolButton" name="findFileButton">
+      <property name="text">
+       <string>Открыть файл</string>
       </property>
      </widget>
     </item>
@@ -72,6 +72,13 @@
      <widget class="QPushButton" name="saveCsvButton">
       <property name="text">
        <string>Сохранить Csv</string>
+      </property>
+     </widget>
+    </item>
+    <item row="3" column="2">
+     <widget class="QPushButton" name="runOpenNNButton">
+      <property name="text">
+       <string>Test OpenNN</string>
       </property>
      </widget>
     </item>
