--- a/Market-Analysis/kitconfigform.ui
+++ b/Market-Analysis/kitconfigform.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>480</width>
-    <height>495</height>
+    <height>518</height>
    </rect>
   </property>
   <property name="minimumSize">
@@ -25,7 +25,7 @@
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
-  <layout class="QVBoxLayout" name="verticalLayout" stretch="0,0,0,0,0,0,0,0,0,0,2,0,0">
+  <layout class="QVBoxLayout" name="verticalLayout" stretch="0,0,0,0,0,0,0,0,0,0,2,0,0,0">
    <item>
     <layout class="QHBoxLayout" name="nameKitHLayout" stretch="0,2,0">
      <property name="leftMargin">
@@ -112,7 +112,7 @@
     </layout>
    </item>
    <item>
-    <layout class="QHBoxLayout" name="serverHLayout" stretch="0,2,0">
+    <layout class="QHBoxLayout" name="serverHLayout" stretch="0,2,1">
      <property name="leftMargin">
       <number>3</number>
      </property>
@@ -136,17 +136,11 @@
       <widget class="QComboBox" name="serverCBox"/>
      </item>
      <item>
-      <spacer name="serverSpacer">
-       <property name="orientation">
-        <enum>Qt::Horizontal</enum>
+      <widget class="QPushButton" name="runTerminalButton">
+       <property name="text">
+        <string>Run MT4 with assistant</string>
        </property>
-       <property name="sizeHint" stdset="0">
-        <size>
-         <width>40</width>
-         <height>20</height>
-        </size>
-       </property>
-      </spacer>
+      </widget>
      </item>
     </layout>
    </item>
@@ -441,6 +435,49 @@ Layers size = &quot;6, 9, 3&quot;.</string>
         </spacer>
        </item>
       </layout>
+     </item>
+    </layout>
+   </item>
+   <item>
+    <layout class="QHBoxLayout" name="radioHLayout" stretch="1,1,1">
+     <property name="leftMargin">
+      <number>3</number>
+     </property>
+     <property name="topMargin">
+      <number>3</number>
+     </property>
+     <property name="rightMargin">
+      <number>3</number>
+     </property>
+     <property name="bottomMargin">
+      <number>3</number>
+     </property>
+     <item>
+      <widget class="QCheckBox" name="recurrentNNChBox">
+       <property name="text">
+        <string>Recurrent input layer</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QCheckBox" name="readVolumeChBox">
+       <property name="text">
+        <string>Read volume data</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <spacer name="horizontalSpacer_4">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>40</width>
+         <height>20</height>
+        </size>
+       </property>
+      </spacer>
      </item>
     </layout>
    </item>
